--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,10 @@
 # 基础配置
-title: "我的知识库"
+title: "九头鸟龙"
 url: "https://pengjunlong.github.io"
 baseurl: ""
 remote_theme: mmistakes/minimal-mistakes
+markdown: kramdown
 
-# 作者信息
-author:
-  name: "彭俊龙"
-  github: "pengjunlong"
 
 # 导航配置
 navigation:
@@ -38,11 +35,79 @@ comments:
 
 # 构建设置
 plugins:
-  - jekyll-feed
+  - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
   - jekyll-include-cache
 
 exclude:
   - "node_modules"
   - "Gemfile*"
   - "vendor"
+
+
+
+
+
+
+
+
+author:
+  name   : "Junlong Peng"
+  avatar : "https://avatars.githubusercontent.com/u/1436509?v=4"
+  bio    : "My awesome biography constrained to a sentence or two goes here."
+  links:
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
+
+footer:
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
+
