--- a/_config.yml
+++ b/_config.yml
@@ -1,76 +1,56 @@
-# 基础配置
-title: "九头鸟龙"
-url: "https://pengjunlong.github.io"
-baseurl: ""
-remote_theme: mmistakes/minimal-mistakes
-markdown: kramdown
+# 站点基本信息
+title: "九头鸟龙"          # 站点标题，影响所有页面的<title>标签和页眉显示
+name: "pengjunlong"              # 站点所有者名称，影响作者信息区域
+description: "落霞与孤鹜齐飞，秋水共长天一色"    # 站点描述，影响<meta description>和SEO
+url: "https://pengjunlong.github.io" # 站点URL，影响所有绝对链接
+baseurl: ""          # 站点子路径，影响资源路径
 
+# 构建设置
+plugins:                # 插件列表
+  - jekyll-feed
+  - jekyll-sitemap
+exclude:                # 排除文件/目录
+  - "node_modules"
+  - "Gemfile.lock"
+include:                # 包含特殊文件
+  - ".htaccess"
+keep_files:             # 保留文件
+  - ".gitignore"
 
-# 导航配置
+# 主题配置
+theme: minimal-mistakes-jekyll # 使用主题
+minimal_mistakes_skin: "dark" # 皮肤(default, air, dark等)
+
+# 导航栏配置
+# 主导航
+defaults:
+  - scope:
+      path: "" # 所有页面
+    values:
+      layout: "single"
+      author_profile: true
+# 顶部导航菜单
 navigation:
   main:
     - title: "首页"
       url: "/"
-    - title: "博客"
-      url: "/blog/"
-    - title: "项目"
-      url: "/projects/"
+    - title: "关于"
+      url: "/about/"
 
-# 子站点默认配置 (可选，用于JS加载失败时)
-subsites:
-  - displayName: "技术博客"
-    url: "/blog/"
-    icon: "fas fa-code"
-    description: "技术文章与教程"
-  - displayName: "开源项目"
-    url: "/projects/"
-    icon: "fas fa-rocket"
-    description: "代码仓库与演示"
-
-# 主题设置
-minimal_mistakes_skin: dark
-search: true
-comments:
-  provider: false
-
-# 构建设置
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
-
-exclude:
-  - "node_modules"
-  - "Gemfile*"
-  - "vendor"
-
-
-
-
-
-
-
-
+# 作者信息
 author:
-  name   : "Junlong Peng"
-  avatar : "https://avatars.githubusercontent.com/u/1436509?v=4"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
-  links:
+  name: "Junlong Peng"
+  avatar: "https://avatars.githubusercontent.com/u/1436509?v=4" # 作者头像
+  bio: "数风流人物千里共婵娟"                     # 作者简介
+  location: "北京"                      # 位置
+  email: ""         # 邮箱
+  links:                                # 社交链接
+    - label: "GitHub"
+      icon: "fab fa-github"
+      url: "https://github.com/pengjunlong"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://google.com"
 
 footer:
   links:
@@ -84,30 +64,27 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
 
-defaults:
-  # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
+# 分页配置
+paginate: 5             # 每页显示文章数
+paginate_path: "/blog/page:num" # 分页路径格式
 
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+# 搜索功能
+search: true            # 启用搜索
+search_provider: "lunr" # 搜索提供者(lunr, algolia)
 
+# SEO优化
+seo:
+  title: true           # 自动生成SEO标题
+  title_separator: "-"  # 标题分隔符
+  description: true     # 使用页面描述
+  author: true          # 包含作者信息
+
+# 分析统计
+analytics:
+  provider: "google"    # 分析服务(google, custom)
+  google:
+    tracking_id: "UA-43024673-1" # Google Analytics ID
+
+# 社交分享
+share: true             # 启用分享按钮
+share_provider: "addtoany" # 分享服务
