--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ baseurl: ""          # 站点子路径，影响资源路径
 plugins:                # 插件列表
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-include-cache
 exclude:                # 排除文件/目录
   - "node_modules"
   - "Gemfile.lock"
@@ -16,9 +17,14 @@ include:                # 包含特殊文件
   - ".htaccess"
 keep_files:             # 保留文件
   - ".gitignore"
+include_cache:
+  enabled: true # 全局开关
+  path: "_cache" # 缓存目录
+  expires: 3600 # 缓存有效期(秒)
+
 
 # 主题配置
-theme: minimal-mistakes-jekyll # 使用主题
+remote_theme: mmistakes/minimal-mistakes@4.24.0
 minimal_mistakes_skin: "dark" # 皮肤(default, air, dark等)
 
 # 导航栏配置
